--- a/NotesApp/NotesApp.Domain/NotesApp.Domain.csproj
+++ b/NotesApp/NotesApp.Domain/NotesApp.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BuildingBlocks\SeedWork\SeedWork.Domain\SeedWork.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
