Api Layer is implemented.

--- a/NotesApp/NotesApp.API/NotesApp.API.csproj
+++ b/NotesApp/NotesApp.API/NotesApp.API.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\NotesApp.Application\NotesApp.Application.csproj" />
+    <ProjectReference Include="..\NotesApp.Infrastructure\NotesApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
