--- a/NotesApp/NotesApp.API/appsettings.json
+++ b/NotesApp/NotesApp.API/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "ConnectionStrings": {
+    "AppConn": "Server=localhost; Port=5432; Database=NotesAppDb;User Id=postgres;Password=user;"
+  },
+  "TokenOptions": {
+    "Audience": "localhost@gmail.com",
+    "Issuer": "localhost@gmail.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
