--- a/NotesApp/NotesApp.Infrastructure.Caching/NotesApp.Infrastructure.Caching.csproj
+++ b/NotesApp/NotesApp.Infrastructure.Caching/NotesApp.Infrastructure.Caching.csproj
@@ -6,4 +6,20 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="Concrete\MemoryCacheService.cs~RF2ed5d96d.TMP" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Hangfire.Core" Version="1.7.30" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Scrutor" Version="4.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\NotesApp.Domain\NotesApp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
