Authorization and Authentcation is configured. In addition, Hangfire configuration is added

--- a/NotesApp/NotesApp.API/appsettings.json
+++ b/NotesApp/NotesApp.API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppConn": "Server=localhost; Port=5432; Database=NotesAppDb;User Id=postgres;Password=user;"
+    "AppConn": "Server=localhost; Port=5432; Database=NotesAppDb;User Id=postgres;Password=user;",
   },
   "TokenOptions": {
     "Audience": "localhost@gmail.com",
