Notes Tag Add Operation made more secure.

--- a/NotesApp/NotesApp.Domain/NotesApp.Domain.csproj
+++ b/NotesApp/NotesApp.Domain/NotesApp.Domain.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="6.0.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\BuildingBlocks\SeedWork\SeedWork.Domain\SeedWork.Domain.csproj" />
   </ItemGroup>
 
